Made AboutUs Componenet and Page.Fix layout issue when content is less.Fix static testing images routing issues when folder directory will increase by moving it in public folder

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 body {
   font-family: "Roboto", sans-serif;
 }
